freesia/k8s/core/dex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex
  labels:
    app.kubernetes.io/name: dex
    
  
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: dex
  template:
    metadata:
      annotations:
      
        checksum/config: 1d0a46b11cb1db5ac3c984e9798000420b26b6b0d9f7af3f60e2848413988f48
      labels:
        app.kubernetes.io/name: dex
    spec:
      serviceAccountName: dex
      containers:
        - name: dex
          image: "ghcr.io/dexidp/dex:REPLACE_HERE"
          args:
            - dex
            - serve
            - --web-http-addr
            - 0.0.0.0:5556
            - --telemetry-addr
            - 0.0.0.0:5558
            - /etc/dex/config.yaml
          ports:
            - name: http
              containerPort: 5556
              protocol: TCP
            - name: https
              containerPort: 5554
              protocol: TCP
            - name: telemetry
              containerPort: 5558
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz/live
              port: telemetry
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: telemetry
          resources:
            {}
          volumeMounts:
            - name: config
              mountPath: /etc/dex
              readOnly: true
      volumes:
        - name: config
          secret:
            secretName: dex
